change package structure